2010-10-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Deploy Queue class in more places throughout QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=47855

        I also caught two typos from the previous change.  Unfortunately
        I don't yet know how to unittest request handlers yet.

        * QueueStatusServer/handlers/dashboard.py:
        * QueueStatusServer/handlers/statusbubble.py:
        * QueueStatusServer/handlers/updateworkitems.py:
        * QueueStatusServer/model/activeworkitems.py:
        * QueueStatusServer/model/attachment.py:
        * QueueStatusServer/model/queuepropertymixin.py: Added.
        * QueueStatusServer/model/queuepropertymixin_unittest.py: Added.
        * QueueStatusServer/model/queuestatus.py:
        * QueueStatusServer/model/workitems.py:

2010-10-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        scm.py should be able tell us what revisions made changes to a given file
        https://bugs.webkit.org/show_bug.cgi?id=47863

        Look again, your SCM.py can now log files.

        * Scripts/webkitpy/common/checkout/scm.py:
        * Scripts/webkitpy/common/checkout/scm_unittest.py:

2010-10-18  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Siedel.

        new-run-webkit-tests: clean up the options-parsing code in the port
        classes.
        
        This change modifies the Port interface to have a get_option() and
        set_option_default() method for accessing the options argument
        passed to the constructor. If the constructor is not passed an
        options argument, we default to a MockOptions() argument from
        mocktool, which has the same semantics we want.

        Note that there is a disadvantage to port.get_option('foo') over
        port._options.foo, which is that you lose some of the checking
        for whether 'foo' is set (typos result in the default value, not